src/test/ui/rfc-2632-const-trait-impl/issue-88155.stderr
error: cannot call non-const fn `<T as A>::assoc` in functions
  --> $DIR/issue-88155.rs:8:5
   |
LL |     T::assoc()
   |     ^^^^^^^^^^

error: aborting due to previous error

